analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BACKSLASH
    BEGIN
    BREAK
    CASE
    CLASS
    DEF
    DEFINED
    DIVIDE_ASSIGN
    DOUBLE_QUOTE
    ELSIF
    EXPONENT_ASSIGN
    FOR
    IN
    MINUS_ASSIGN
    MODULE
    MODULO_ASSIGN
    MULTIPLY_ASSIGN
    NOT
    PLUS_ASSIGN
    RANGE_EX
    RANGE_IN
    REDO
    RETURN
    SELF
    TAB
    TO_I
    UNTIL
    WHEN

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> puts
Rule 2     codigo -> gets
Rule 3     codigo -> estructura_datos
Rule 4     codigo -> estructura_control
Rule 5     codigo -> llamada_metodo
Rule 6     codigo -> declaracion_variable
Rule 7     codigo -> almacenar_resultado_condicional
Rule 8     codigo -> declaracion_estructura_datos
Rule 9     codigo -> condiciones_con_conectores
Rule 10    estructura_datos -> array
Rule 11    estructura_datos -> variable_arreglo
Rule 12    estructura_datos -> acceder_arreglo
Rule 13    estructura_control -> if_statement
Rule 14    declaracion_variable -> variable ASSIGN value
Rule 15    almacenar_resultado_condicional -> variable ASSIGN condiciones
Rule 16    declaracion_estructura_datos -> variable_arreglo
Rule 17    condiciones_con_conectores -> condiciones conectores condiciones
Rule 18    llamada_metodo -> variable LEFT_PAR values RIGHT_PAR
Rule 19    llamada_metodo -> variable LEFT_PAR RIGHT_PAR
Rule 20    value -> variable
Rule 21    value -> numero
Rule 22    value -> STRING
Rule 23    value -> NIL
Rule 24    value -> SYMBOL
Rule 25    values_space -> value
Rule 26    values_space -> value SPACE values_space
Rule 27    values -> value
Rule 28    values -> value COMMA values
Rule 29    variable -> LOCAL_VARIABLE
Rule 30    variable -> INSTANCE_VARIABLE
Rule 31    variable -> CLASS_VARIABLE
Rule 32    variable -> GLOBAL_VARIABLE
Rule 33    variable -> CONSTANT
Rule 34    numero -> FLOAT
Rule 35    numero -> INTEGER
Rule 36    gets -> GETS DOT CHOMP DOT TO_F
Rule 37    gets -> GETS DOT CHOMP
Rule 38    puts -> PUTS values
Rule 39    array -> array_explicito
Rule 40    array -> array_implicito
Rule 41    array -> array_creacion
Rule 42    array -> array_new
Rule 43    array_explicito -> LEFT_COR values RIGHT_COR
Rule 44    array_explicito -> LEFT_COR RIGHT_COR
Rule 45    array_implicito -> PERCENT_W LEFT_COR values_space RIGHT_COR
Rule 46    array_implicito -> PERCENT_W LEFT_COR RIGHT_COR
Rule 47    array_creacion -> ARRAY LEFT_PAR array_explicito RIGHT_PAR
Rule 48    array_new -> ARRAY DOT NEW
Rule 49    array_new -> ARRAY DOT NEW LEFT_PAR INTEGER RIGHT_PAR
Rule 50    array_new -> ARRAY DOT NEW LEFT_PAR INTEGER COMMA values RIGHT_PAR
Rule 51    variable_arreglo -> variable
Rule 52    variable_arreglo -> variable ASSIGN array
Rule 53    acceder_arreglo -> variable_arreglo LEFT_COR INTEGER RIGHT_COR
Rule 54    if_statement -> IF condiciones NEWLINE codigo END
Rule 55    if_statement -> IF condiciones NEWLINE codigo else_statement END
Rule 56    else_statement -> ELSE NEWLINE codigo
Rule 57    condiciones -> condicion
Rule 58    condiciones -> condiciones conectores condiciones
Rule 59    condicion -> numero operador_comparacion numero
Rule 60    condicion -> variable operador_comparacion numero
Rule 61    condicion -> numero operador_comparacion variable
Rule 62    conectores -> AND
Rule 63    conectores -> OR
Rule 64    conectores -> AND_RESERVED
Rule 65    conectores -> OR_RESERVED
Rule 66    operador_comparacion -> CASE_EQUAL
Rule 67    operador_comparacion -> EQUAL
Rule 68    operador_comparacion -> GREATER_THAN
Rule 69    operador_comparacion -> GREATER_THAN_EQUAL
Rule 70    operador_comparacion -> LESS_THAN
Rule 71    operador_comparacion -> LESS_THAN_EQUAL
Rule 72    operador_comparacion -> NOT_EQUAL
Rule 73    operador_comparacion -> SPACESHIP
Rule 74    hash_declaration -> HASH LEFT_COR values RIGHT_COR
Rule 75    hash_declaration -> HASH LEFT_COR RIGHT_COR
Rule 76    hash_access -> variable LEFT_COR value RIGHT_COR
Rule 77    hash_operations -> hash_access ASSIGN value
Rule 78    while_statement -> WHILE condiciones COLON codigo
Rule 79    print_statement -> PUTS LEFT_PAR values RIGHT_PAR
Rule 80    boolean_expression -> expression GREATER_THAN expression
Rule 81    boolean_expression -> expression LESS_THAN expression
Rule 82    boolean_expression -> expression GREATER_THAN_EQUAL expression
Rule 83    boolean_expression -> expression LESS_THAN_EQUAL expression
Rule 84    boolean_expression -> expression EQUAL expression
Rule 85    boolean_expression -> expression NOT_EQUAL expression
Rule 86    boolean_expression -> BOOLEAN
Rule 87    expression -> INTEGER
Rule 88    expression -> FLOAT
Rule 89    expression -> variable
Rule 90    expression -> STRING
Rule 91    declaraciones -> declaracion_variable
Rule 92    declaraciones -> almacenar_resultado_condicional
Rule 93    declaraciones -> declaracion_estructura_datos
Rule 94    expresion -> puts
Rule 95    expresion -> gets
Rule 96    expresion -> print_statement
Rule 97    set_expression -> SET DOT NEW LEFT_PAR LEFT_COR values RIGHT_COR RIGHT_PAR
Rule 98    set_expression -> SET LEFT_COR values RIGHT_COR
Rule 99    set_operations -> set_expression
Rule 100   set_operations -> set_operations set_binary_operators set_expression
Rule 101   declaracion_estructura_datos -> LOCAL_VARIABLE ASSIGN set_expression
Rule 102   set_binary_operators -> PLUS
Rule 103   set_binary_operators -> MINUS
Rule 104   set_binary_operators -> AMPERSAND
Rule 105   set_binary_operators -> PIPE
Rule 106   set_binary_operators -> CARET
Rule 107   unless_expression -> UNLESS boolean_expression THEN expresion END
Rule 108   unless_expression -> UNLESS boolean_expression THEN expresion ELSE expresion END
Rule 109   expresion -> arithmetic_production
Rule 110   arithmetic_production -> numero
Rule 111   arithmetic_production -> variable
Rule 112   arithmetic_production -> numero arithmetic_operators arithmetic_production
Rule 113   arithmetic_production -> variable arithmetic_operators arithmetic_production
Rule 114   arithmetic_operators -> PLUS
Rule 115   arithmetic_operators -> MINUS
Rule 116   arithmetic_operators -> MULTIPLY
Rule 117   arithmetic_operators -> DIVIDE
Rule 118   arithmetic_operators -> MODULO
Rule 119   arithmetic_operators -> EXPONENT
Rule 120   block_expression -> LBRACE expresion RBRACE
Rule 121   block_expression -> DO expresion END
Rule 122   block_expression -> LBRACE PIPE LOCAL_VARIABLE PIPE expresion RBRACE
Rule 123   block_expression -> DO PIPE LOCAL_VARIABLE PIPE expresion END
Rule 124   block_assignment -> llamada_metodo block_expression
Rule 125   proc_expression -> PROC DOT NEW block_expression
Rule 126   proc_assignment -> LOCAL_VARIABLE ASSIGN proc_expression
Rule 127   proc_call -> LOCAL_VARIABLE DOT CALL LEFT_PAR values RIGHT_PAR
Rule 128   proc_call -> LOCAL_VARIABLE DOT LEFT_PAR values RIGHT_PAR
Rule 129   proc_call -> LOCAL_VARIABLE LEFT_COR values RIGHT_COR
Rule 130   expresion -> condiciones_con_conectores

Terminals, with rules where they appear

AMPERSAND            : 104
AND                  : 62
AND_RESERVED         : 64
ARRAY                : 47 48 49 50
ASSIGN               : 14 15 52 77 101 126
BACKSLASH            : 
BEGIN                : 
BOOLEAN              : 86
BREAK                : 
CALL                 : 127
CARET                : 106
CASE                 : 
CASE_EQUAL           : 66
CHOMP                : 36 37
CLASS                : 
CLASS_VARIABLE       : 31
COLON                : 78
COMMA                : 28 50
CONSTANT             : 33
DEF                  : 
DEFINED              : 
DIVIDE               : 117
DIVIDE_ASSIGN        : 
DO                   : 121 123
DOT                  : 36 36 37 48 49 50 97 125 127 128
DOUBLE_QUOTE         : 
ELSE                 : 56 108
ELSIF                : 
END                  : 54 55 107 108 121 123
EQUAL                : 67 84
EXPONENT             : 119
EXPONENT_ASSIGN      : 
FLOAT                : 34 88
FOR                  : 
GETS                 : 36 37
GLOBAL_VARIABLE      : 32
GREATER_THAN         : 68 80
GREATER_THAN_EQUAL   : 69 82
HASH                 : 74 75
IF                   : 54 55
IN                   : 
INSTANCE_VARIABLE    : 30
INTEGER              : 35 49 50 53 87
LBRACE               : 120 122
LEFT_COR             : 43 44 45 46 53 74 75 76 97 98 129
LEFT_PAR             : 18 19 47 49 50 79 97 127 128
LESS_THAN            : 70 81
LESS_THAN_EQUAL      : 71 83
LOCAL_VARIABLE       : 29 101 122 123 126 127 128 129
MINUS                : 103 115
MINUS_ASSIGN         : 
MODULE               : 
MODULO               : 118
MODULO_ASSIGN        : 
MULTIPLY             : 116
MULTIPLY_ASSIGN      : 
NEW                  : 48 49 50 97 125
NEWLINE              : 54 55 56
NIL                  : 23
NOT                  : 
NOT_EQUAL            : 72 85
OR                   : 63
OR_RESERVED          : 65
PERCENT_W            : 45 46
PIPE                 : 105 122 122 123 123
PLUS                 : 102 114
PLUS_ASSIGN          : 
PROC                 : 125
PUTS                 : 38 79
RANGE_EX             : 
RANGE_IN             : 
RBRACE               : 120 122
REDO                 : 
RETURN               : 
RIGHT_COR            : 43 44 45 46 53 74 75 76 97 98 129
RIGHT_PAR            : 18 19 47 49 50 79 97 127 128
SELF                 : 
SET                  : 97 98
SPACE                : 26
SPACESHIP            : 73
STRING               : 22 90
SYMBOL               : 24
TAB                  : 
THEN                 : 107 108
TO_F                 : 36
TO_I                 : 
UNLESS               : 107 108
UNTIL                : 
WHEN                 : 
WHILE                : 78
error                : 

Nonterminals, with rules where they appear

acceder_arreglo      : 12
almacenar_resultado_condicional : 7 92
arithmetic_operators : 112 113
arithmetic_production : 109 112 113
array                : 10 52
array_creacion       : 41
array_explicito      : 39 47
array_implicito      : 40
array_new            : 42
block_assignment     : 
block_expression     : 124 125
boolean_expression   : 107 108
codigo               : 54 55 56 78 0
condicion            : 57
condiciones          : 15 17 17 54 55 58 58 78
condiciones_con_conectores : 9 130
conectores           : 17 58
declaracion_estructura_datos : 8 93
declaracion_variable : 6 91
declaraciones        : 
else_statement       : 55
estructura_control   : 4
estructura_datos     : 3
expresion            : 107 108 108 120 121 122 123
expression           : 80 80 81 81 82 82 83 83 84 84 85 85
gets                 : 2 95
hash_access          : 77
hash_declaration     : 
hash_operations      : 
if_statement         : 13
llamada_metodo       : 5 124
numero               : 21 59 59 60 61 110 112
operador_comparacion : 59 60 61
print_statement      : 96
proc_assignment      : 
proc_call            : 
proc_expression      : 126
puts                 : 1 94
set_binary_operators : 100
set_expression       : 99 100 101
set_operations       : 100
unless_expression    : 
value                : 14 25 26 27 28 76 77
values               : 18 28 38 43 50 74 79 97 98 127 128 129
values_space         : 26 45
variable             : 14 15 18 19 20 51 52 60 61 76 89 111 113
variable_arreglo     : 11 16 53
while_statement      : 

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . puts
    (2) codigo -> . gets
    (3) codigo -> . estructura_datos
    (4) codigo -> . estructura_control
    (5) codigo -> . llamada_metodo
    (6) codigo -> . declaracion_variable
    (7) codigo -> . almacenar_resultado_condicional
    (8) codigo -> . declaracion_estructura_datos
    (9) codigo -> . condiciones_con_conectores
    (38) puts -> . PUTS values
    (36) gets -> . GETS DOT CHOMP DOT TO_F
    (37) gets -> . GETS DOT CHOMP
    (10) estructura_datos -> . array
    (11) estructura_datos -> . variable_arreglo
    (12) estructura_datos -> . acceder_arreglo
    (13) estructura_control -> . if_statement
    (18) llamada_metodo -> . variable LEFT_PAR values RIGHT_PAR
    (19) llamada_metodo -> . variable LEFT_PAR RIGHT_PAR
    (14) declaracion_variable -> . variable ASSIGN value
    (15) almacenar_resultado_condicional -> . variable ASSIGN condiciones
    (16) declaracion_estructura_datos -> . variable_arreglo
    (101) declaracion_estructura_datos -> . LOCAL_VARIABLE ASSIGN set_expression
    (17) condiciones_con_conectores -> . condiciones conectores condiciones
    (39) array -> . array_explicito
    (40) array -> . array_implicito
    (41) array -> . array_creacion
    (42) array -> . array_new
    (51) variable_arreglo -> . variable
    (52) variable_arreglo -> . variable ASSIGN array
    (53) acceder_arreglo -> . variable_arreglo LEFT_COR INTEGER RIGHT_COR
    (54) if_statement -> . IF condiciones NEWLINE codigo END
    (55) if_statement -> . IF condiciones NEWLINE codigo else_statement END
    (29) variable -> . LOCAL_VARIABLE
    (30) variable -> . INSTANCE_VARIABLE
    (31) variable -> . CLASS_VARIABLE
    (32) variable -> . GLOBAL_VARIABLE
    (33) variable -> . CONSTANT
    (57) condiciones -> . condicion
    (58) condiciones -> . condiciones conectores condiciones
    (43) array_explicito -> . LEFT_COR values RIGHT_COR
    (44) array_explicito -> . LEFT_COR RIGHT_COR
    (45) array_implicito -> . PERCENT_W LEFT_COR values_space RIGHT_COR
    (46) array_implicito -> . PERCENT_W LEFT_COR RIGHT_COR
    (47) array_creacion -> . ARRAY LEFT_PAR array_explicito RIGHT_PAR
    (48) array_new -> . ARRAY DOT NEW
    (49) array_new -> . ARRAY DOT NEW LEFT_PAR INTEGER RIGHT_PAR
    (50) array_new -> . ARRAY DOT NEW LEFT_PAR INTEGER COMMA values RIGHT_PAR
    (59) condicion -> . numero operador_comparacion numero
    (60) condicion -> . variable operador_comparacion numero
    (61) condicion -> . numero operador_comparacion variable
    (34) numero -> . FLOAT
    (35) numero -> . INTEGER

    PUTS            shift and go to state 11
    GETS            shift and go to state 12
    LOCAL_VARIABLE  shift and go to state 19
    IF              shift and go to state 26
    INSTANCE_VARIABLE shift and go to state 27
    CLASS_VARIABLE  shift and go to state 28
    GLOBAL_VARIABLE shift and go to state 29
    CONSTANT        shift and go to state 30
    LEFT_COR        shift and go to state 24
    PERCENT_W       shift and go to state 32
    ARRAY           shift and go to state 33
    FLOAT           shift and go to state 35
    INTEGER         shift and go to state 25

    codigo                         shift and go to state 1
    puts                           shift and go to state 2
    gets                           shift and go to state 3
    estructura_datos               shift and go to state 4
    estructura_control             shift and go to state 5
    llamada_metodo                 shift and go to state 6
    declaracion_variable           shift and go to state 7
    almacenar_resultado_condicional shift and go to state 8
    declaracion_estructura_datos   shift and go to state 9
    condiciones_con_conectores     shift and go to state 10
    array                          shift and go to state 13
    variable_arreglo               shift and go to state 14
    acceder_arreglo                shift and go to state 15
    if_statement                   shift and go to state 16
    variable                       shift and go to state 17
    condiciones                    shift and go to state 18
    array_explicito                shift and go to state 20
    array_implicito                shift and go to state 21
    array_creacion                 shift and go to state 22
    array_new                      shift and go to state 23
    condicion                      shift and go to state 31
    numero                         shift and go to state 34

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> puts .

    $end            reduce using rule 1 (codigo -> puts .)
    END             reduce using rule 1 (codigo -> puts .)
    ELSE            reduce using rule 1 (codigo -> puts .)


state 3

    (2) codigo -> gets .

    $end            reduce using rule 2 (codigo -> gets .)
    END             reduce using rule 2 (codigo -> gets .)
    ELSE            reduce using rule 2 (codigo -> gets .)


state 4

    (3) codigo -> estructura_datos .

    $end            reduce using rule 3 (codigo -> estructura_datos .)
    END             reduce using rule 3 (codigo -> estructura_datos .)
    ELSE            reduce using rule 3 (codigo -> estructura_datos .)


state 5

    (4) codigo -> estructura_control .

    $end            reduce using rule 4 (codigo -> estructura_control .)
    END             reduce using rule 4 (codigo -> estructura_control .)
    ELSE            reduce using rule 4 (codigo -> estructura_control .)


state 6

    (5) codigo -> llamada_metodo .

    $end            reduce using rule 5 (codigo -> llamada_metodo .)
    END             reduce using rule 5 (codigo -> llamada_metodo .)
    ELSE            reduce using rule 5 (codigo -> llamada_metodo .)


state 7

    (6) codigo -> declaracion_variable .

    $end            reduce using rule 6 (codigo -> declaracion_variable .)
    END             reduce using rule 6 (codigo -> declaracion_variable .)
    ELSE            reduce using rule 6 (codigo -> declaracion_variable .)


state 8

    (7) codigo -> almacenar_resultado_condicional .

    $end            reduce using rule 7 (codigo -> almacenar_resultado_condicional .)
    END             reduce using rule 7 (codigo -> almacenar_resultado_condicional .)
    ELSE            reduce using rule 7 (codigo -> almacenar_resultado_condicional .)


state 9

    (8) codigo -> declaracion_estructura_datos .

    $end            reduce using rule 8 (codigo -> declaracion_estructura_datos .)
    END             reduce using rule 8 (codigo -> declaracion_estructura_datos .)
    ELSE            reduce using rule 8 (codigo -> declaracion_estructura_datos .)


state 10

    (9) codigo -> condiciones_con_conectores .

    $end            reduce using rule 9 (codigo -> condiciones_con_conectores .)
    END             reduce using rule 9 (codigo -> condiciones_con_conectores .)
    ELSE            reduce using rule 9 (codigo -> condiciones_con_conectores .)


state 11

    (38) puts -> PUTS . values
    (27) values -> . value
    (28) values -> . value COMMA values
    (20) value -> . variable
    (21) value -> . numero
    (22) value -> . STRING
    (23) value -> . NIL
    (24) value -> . SYMBOL
    (29) variable -> . LOCAL_VARIABLE
    (30) variable -> . INSTANCE_VARIABLE
    (31) variable -> . CLASS_VARIABLE
    (32) variable -> . GLOBAL_VARIABLE
    (33) variable -> . CONSTANT
    (34) numero -> . FLOAT
    (35) numero -> . INTEGER

    STRING          shift and go to state 40
    NIL             shift and go to state 41
    SYMBOL          shift and go to state 42
    LOCAL_VARIABLE  shift and go to state 43
    INSTANCE_VARIABLE shift and go to state 27
    CLASS_VARIABLE  shift and go to state 28
    GLOBAL_VARIABLE shift and go to state 29
    CONSTANT        shift and go to state 30
    FLOAT           shift and go to state 35
    INTEGER         shift and go to state 25

    values                         shift and go to state 36
    value                          shift and go to state 37
    variable                       shift and go to state 38
    numero                         shift and go to state 39

state 12

    (36) gets -> GETS . DOT CHOMP DOT TO_F
    (37) gets -> GETS . DOT CHOMP

    DOT             shift and go to state 44


state 13

    (10) estructura_datos -> array .

    $end            reduce using rule 10 (estructura_datos -> array .)
    END             reduce using rule 10 (estructura_datos -> array .)
    ELSE            reduce using rule 10 (estructura_datos -> array .)


state 14

    (11) estructura_datos -> variable_arreglo .
    (16) declaracion_estructura_datos -> variable_arreglo .
    (53) acceder_arreglo -> variable_arreglo . LEFT_COR INTEGER RIGHT_COR

  ! reduce/reduce conflict for $end resolved using rule 11 (estructura_datos -> variable_arreglo .)
  ! reduce/reduce conflict for END resolved using rule 11 (estructura_datos -> variable_arreglo .)
  ! reduce/reduce conflict for ELSE resolved using rule 11 (estructura_datos -> variable_arreglo .)
    $end            reduce using rule 11 (estructura_datos -> variable_arreglo .)
    END             reduce using rule 11 (estructura_datos -> variable_arreglo .)
    ELSE            reduce using rule 11 (estructura_datos -> variable_arreglo .)
    LEFT_COR        shift and go to state 45

  ! $end            [ reduce using rule 16 (declaracion_estructura_datos -> variable_arreglo .) ]
  ! END             [ reduce using rule 16 (declaracion_estructura_datos -> variable_arreglo .) ]
  ! ELSE            [ reduce using rule 16 (declaracion_estructura_datos -> variable_arreglo .) ]


state 15

    (12) estructura_datos -> acceder_arreglo .

    $end            reduce using rule 12 (estructura_datos -> acceder_arreglo .)
    END             reduce using rule 12 (estructura_datos -> acceder_arreglo .)
    ELSE            reduce using rule 12 (estructura_datos -> acceder_arreglo .)


state 16
